--- a/assimp_viewer/assimp_viewer.vcxproj.filters
+++ b/assimp_viewer/assimp_viewer.vcxproj.filters
@@ -20,22 +20,22 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="animation.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="model.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\skeleton.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="animatie_function.h">
+    <ClInclude Include="..\include\animation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BoneAnimationChannel.h">
+    <ClInclude Include="..\include\BoneAnimationChannel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\animate_function.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
