--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -137,10 +137,10 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\animate_function.h" />
     <ClInclude Include="..\include\animation.h" />
-    <ClInclude Include="..\include\BoneAnimationChannel.h" />
+    <ClInclude Include="..\include\bone_animation.h" />
     <ClInclude Include="..\include\camera.h" />
+    <ClInclude Include="..\include\log_file_functions.h" />
     <ClInclude Include="..\include\model.h" />
     <ClInclude Include="..\include\skeleton.h" />
   </ItemGroup>
