--- a/assimp_viewer/assimp_viewer.vcxproj.filters
+++ b/assimp_viewer/assimp_viewer.vcxproj.filters
@@ -32,13 +32,13 @@
     <ClInclude Include="..\include\animation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\BoneAnimationChannel.h">
+    <ClInclude Include="..\include\bone_animation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\animate_function.h">
+    <ClInclude Include="..\include\log_file_functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
