--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -147,9 +147,18 @@
     <ClInclude Include="..\include\animation.h" />
     <ClInclude Include="..\include\bone_animation.h" />
     <ClInclude Include="..\include\camera.h" />
+    <ClInclude Include="..\include\grid.h" />
     <ClInclude Include="..\include\log_file_functions.h" />
     <ClInclude Include="..\include\model.h" />
     <ClInclude Include="..\include\skeleton.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\shaders\4.2.texture.fs" />
+    <None Include="..\shaders\4.2.texture.vs" />
+    <None Include="..\shaders\anim_model.fs" />
+    <None Include="..\shaders\anim_model.vs" />
+    <None Include="..\shaders\grid.fs" />
+    <None Include="..\shaders\grid.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
