--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -1,10 +1,25 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=2096,84
+Size=151,233
 Collapsed=0
 
 [Window][ImGui Window]
-Pos=1090,148
-Size=160,166
+Pos=146,626
+Size=280,136
+Collapsed=0
+
+[Window][Model]
+Pos=190,189
+Size=608,527
+Collapsed=0
+
+[Window][FPS]
+Pos=60,60
+Size=36,35
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=1631,584
+Size=717,741
 Collapsed=0
 
