--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=1261,84
+Pos=1261,236
 Size=151,233
 Collapsed=0
 
 [Window][ImGui Window]
-Pos=243,180
+Pos=298,195
 Size=280,377
 Collapsed=0
 
@@ -19,7 +19,21 @@ Size=36,35
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1631,584
-Size=717,741
+Pos=1261,669
+Size=411,372
 Collapsed=0
+
+[Window][Choose File##ChooseFileDlgKey]
+Pos=912,506
+Size=1129,407
+Collapsed=0
+
+[Window][File]
+Pos=31,30
+Size=80,54
+Collapsed=0
+
+[Table][0x123EFEF7,4]
+RefScale=13
+Column 0  Sort=0v
 
