--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>C:\Users\tjalb\source\repos\TJ-Albertson\assimp_viewer\include;C:\Users\tj.albertson.C-P-U\source\repos\assimp_viewer\include;C:\Users\tj.albertson.C-P-U\source\repos\assimp_viewer\include\imgui;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\tjalb\source\repos\TJ-Albertson\assimp_viewer\lib\x64\GLFW;C:\Users\tj.albertson.C-P-U\source\repos\assimp_viewer\lib\x64\;C:\Users\tjalb\source\repos\TJ-Albertson\assimp_viewer\lib\x64\assimp;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Users\tjalb\source\repos\TJ-Albertson\assimp_viewer\lib\x64\GLFW;C:\Users\tjalb\source\repos\TJ-Albertson\assimp_viewer\lib\x64;C:\Users\tj.albertson.C-P-U\source\repos\assimp_viewer\lib\x64\;C:\Users\tjalb\source\repos\TJ-Albertson\assimp_viewer\lib\x64\assimp;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
