--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -1,11 +1,11 @@
 [Window][Debug##Default]
-Pos=1099,113
-Size=301,222
+Pos=1261,82
+Size=135,112
 Collapsed=0
 
 [Window][ImGui Window]
-Pos=611,74
-Size=280,377
+Pos=1261,701
+Size=458,303
 Collapsed=0
 
 [Window][Model]
@@ -19,8 +19,8 @@ Size=36,35
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=695,307
-Size=573,372
+Pos=1261,701
+Size=573,379
 Collapsed=0
 
 [Window][Choose File##ChooseFileDlgKey]
@@ -29,16 +29,136 @@ Size=1129,407
 Collapsed=0
 
 [Window][File]
-Pos=31,30
-Size=174,178
+Pos=808,128
+Size=174,169
 Collapsed=0
 
 [Window][My First Tool]
-Pos=108,312
-Size=553,414
+Pos=11,72
+Size=454,471
+Collapsed=0
+
+[Window][Tree Viewer]
+Pos=709,268
+Size=300,120
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=1261,173
+Size=1606,986
 Collapsed=0
 
 [Table][0x123EFEF7,4]
 RefScale=13
 Column 0  Sort=0v
+
+[Table][0x64418101,3]
+RefScale=13
+Column 0  Width=75
+Column 1  Width=137
+Column 2  Width=252
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=274
+Column 2  Width=126
+
+[Table][0xA43C3885,3]
+RefScale=13
+Column 0  Width=56
+Column 1  Width=56
+Column 2  Width=56
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=92
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=91
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x9B8E7538,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x45A0E60D,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
+
+[Table][0xC179E37C,3]
+RefScale=13
+Column 0  Width=108 Sort=0v
+Column 1  Width=63
+Column 2  Width=-1
 
