file open and scene

--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -1,11 +1,11 @@
 [Window][Debug##Default]
-Pos=1261,82
-Size=135,112
+Pos=1434,130
+Size=76,51
 Collapsed=0
 
 [Window][ImGui Window]
-Pos=1261,701
-Size=458,303
+Pos=1346,868
+Size=225,112
 Collapsed=0
 
 [Window][Model]
@@ -34,8 +34,8 @@ Size=174,169
 Collapsed=0
 
 [Window][My First Tool]
-Pos=11,72
-Size=454,471
+Pos=14,11
+Size=202,318
 Collapsed=0
 
 [Window][Tree Viewer]
@@ -46,6 +46,11 @@ Collapsed=0
 [Window][Dear ImGui Demo]
 Pos=1261,173
 Size=1606,986
+Collapsed=0
+
+[Window][Menu]
+Pos=9,10
+Size=323,351
 Collapsed=0
 
 [Table][0x123EFEF7,4]
