adding collision detection skeleton code

--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="..\include\animation.h" />
     <ClInclude Include="..\include\bone_animation.h" />
     <ClInclude Include="..\include\camera.h" />
+    <ClInclude Include="..\include\collision.h" />
     <ClInclude Include="..\include\grid.h" />
     <ClInclude Include="..\include\gui.h" />
     <ClInclude Include="..\include\log_file_functions.h" />
