--- a/assimp_viewer/assimp_viewer.vcxproj.filters
+++ b/assimp_viewer/assimp_viewer.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="..\include\shader_m.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\collision copy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\include\collision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
