--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -147,8 +147,8 @@
     <ClInclude Include="..\include\animation.h" />
     <ClInclude Include="..\include\bone_animation.h" />
     <ClInclude Include="..\include\camera.h" />
-    <ClInclude Include="..\include\collision - Copy.h" />
     <ClInclude Include="..\include\collision.h" />
+    <ClInclude Include="..\include\collision copy.h" />
     <ClInclude Include="..\include\grid.h" />
     <ClInclude Include="..\include\gui.h" />
     <ClInclude Include="..\include\log_file_functions.h" />
