--- a/assimp_viewer/assimp_viewer.vcxproj.filters
+++ b/assimp_viewer/assimp_viewer.vcxproj.filters
@@ -118,5 +118,8 @@
     <None Include="..\shaders\skybox.vs">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="..\shaders\hitbox.fs">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
