--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="..\include\skeleton.h" />
     <ClInclude Include="..\include\skybox.h" />
     <ClInclude Include="..\include\test.h" />
+    <ClInclude Include="..\include\utils.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shaders\4.2.texture.fs" />
