--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -4,8 +4,8 @@ Size=76,51
 Collapsed=0
 
 [Window][ImGui Window]
-Pos=947,499
-Size=158,119
+Pos=878,536
+Size=383,138
 Collapsed=0
 
 [Window][Model]
@@ -50,7 +50,12 @@ Collapsed=0
 
 [Window][Menu]
 Pos=6,21
-Size=178,175
+Size=178,176
+Collapsed=0
+
+[Window][Collision]
+Pos=38,233
+Size=349,416
 Collapsed=0
 
 [Table][0x123EFEF7,4]
