--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -49,13 +49,18 @@ Size=1606,986
 Collapsed=0
 
 [Window][Menu]
-Pos=18,19
-Size=178,176
+Pos=129,25
+Size=178,171
 Collapsed=0
 
 [Window][Collision]
 Pos=23,217
 Size=438,457
+Collapsed=0
+
+[Window][Camera]
+Pos=552,34
+Size=142,94
 Collapsed=0
 
 [Table][0x123EFEF7,4]
