added reading json

--- a/assimp_viewer/assimp_viewer.vcxproj.filters
+++ b/assimp_viewer/assimp_viewer.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="..\include\imgui\imgui_impl_opengl3.cpp">
       <Filter>Source Files\imgui</Filter>
     </ClCompile>
+    <ClCompile Include="cJSON.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\camera.h">
