--- a/assimp_viewer/assimp_viewer.vcxproj.filters
+++ b/assimp_viewer/assimp_viewer.vcxproj.filters
@@ -133,5 +133,11 @@
     <None Include="..\shaders\6.multiple_lights.vs">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="..\shaders\billboard.vs">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="..\shaders\billboard.fs">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
