--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -167,6 +167,8 @@
     <None Include="..\shaders\4.2.texture.vs" />
     <None Include="..\shaders\6.multiple_lights.fs" />
     <None Include="..\shaders\6.multiple_lights.vs" />
+    <None Include="..\shaders\animated_texture.fs" />
+    <None Include="..\shaders\animated_texture.vs" />
     <None Include="..\shaders\anim_model.fs" />
     <None Include="..\shaders\anim_model.vs" />
     <None Include="..\shaders\billboard.fs" />
