--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-Pos=712,34
+Pos=725,19
 Size=76,51
-Collapsed=0
+Collapsed=1
 
 [Window][ImGui Window]
 Pos=969,21
@@ -44,23 +44,43 @@ Size=300,120
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1261,173
-Size=1606,986
+Pos=200,701
+Size=1784,986
 Collapsed=0
 
 [Window][Menu]
-Pos=29,63
+Pos=54,233
 Size=301,369
-Collapsed=0
+Collapsed=1
 
 [Window][Collision]
-Pos=5,637
+Pos=18,672
 Size=751,471
-Collapsed=0
+Collapsed=1
 
 [Window][Camera]
-Pos=552,34
+Pos=540,2
 Size=142,94
+Collapsed=0
+
+[Window][Lighting]
+Pos=1018,428
+Size=252,237
+Collapsed=0
+
+[Window][Example: Console]
+Pos=65,120
+Size=520,600
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=132,735
+Size=485,414
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=607,921
 Collapsed=0
 
 [Table][0x123EFEF7,4]
