--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -172,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\resources\scenes\scene1.json" />
+    <None Include="..\resources\scenes\scene2.json" />
     <None Include="..\shaders\4.2.texture.fs" />
     <None Include="..\shaders\4.2.texture.vs" />
     <None Include="..\shaders\6.multiple_lights.fs" />
@@ -180,6 +181,8 @@
     <None Include="..\shaders\animated_texture.vs" />
     <None Include="..\shaders\anim_model.fs" />
     <None Include="..\shaders\anim_model.vs" />
+    <None Include="..\shaders\basic\basic.fs" />
+    <None Include="..\shaders\basic\basic.vs" />
     <None Include="..\shaders\billboard.fs" />
     <None Include="..\shaders\billboard.vs" />
     <None Include="..\shaders\grid.fs" />
