--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-Pos=473,34
-Size=76,51
-Collapsed=1
+Pos=1155,557
+Size=511,305
+Collapsed=0
 
 [Window][ImGui Window]
 Pos=969,21
@@ -9,7 +9,7 @@ Size=383,138
 Collapsed=0
 
 [Window][Model]
-Pos=1703,25
+Pos=721,183
 Size=272,206
 Collapsed=0
 
@@ -44,29 +44,29 @@ Size=300,120
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,1180
-Size=1484,1193
-Collapsed=1
+Pos=306,685
+Size=1482,864
+Collapsed=0
 
 [Window][Menu]
 Pos=58,160
-Size=301,369
+Size=283,543
 Collapsed=0
 
 [Window][Collision]
-Pos=17,1102
+Pos=1602,754
 Size=751,471
-Collapsed=1
+Collapsed=0
 
 [Window][Camera]
-Pos=55,32
-Size=308,119
-Collapsed=1
+Pos=957,320
+Size=500,285
+Collapsed=0
 
 [Window][Lighting]
-Pos=17,1053
+Pos=109,840
 Size=383,219
-Collapsed=1
+Collapsed=0
 
 [Window][Example: Console]
 Pos=65,120
@@ -81,6 +81,51 @@ Collapsed=0
 [Window][Example: Documents]
 Pos=60,60
 Size=607,921
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=249,197
+Size=451,114
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=218,266
+Size=500,440
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=88,765
+Size=582,450
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=60,60
+Size=703,395
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=139,306
+Size=247,48
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=100,100
+Size=451,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=153,417
+Size=451,61
+Collapsed=0
+
+[Window][Overlay Example]
+Pos=200,100
+Size=400,200
 Collapsed=0
 
 [Table][0x123EFEF7,4]
@@ -196,4 +241,8 @@ RefScale=13
 Column 0  Width=108 Sort=0v
 Column 1  Width=63
 Column 2  Width=-1
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
