--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -156,7 +156,7 @@
     <ClInclude Include="..\include\camera.h" />
     <ClInclude Include="..\include\collision.h" />
     <ClInclude Include="..\include\grid.h" />
-    <ClInclude Include="..\include\gui.h" />
+    <ClInclude Include="..\include\dev_gui.h" />
     <ClInclude Include="..\include\log_file_functions.h" />
     <ClInclude Include="..\include\model.h" />
     <ClInclude Include="..\include\my_math.h" />
