--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -9,8 +9,8 @@ Size=383,138
 Collapsed=0
 
 [Window][Model]
-Pos=721,183
-Size=272,206
+Pos=34,571
+Size=342,440
 Collapsed=0
 
 [Window][FPS]
@@ -44,28 +44,28 @@ Size=300,120
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=306,685
-Size=1482,864
-Collapsed=0
+Pos=1240,1108
+Size=1311,594
+Collapsed=1
 
 [Window][Menu]
-Pos=58,160
-Size=283,543
+Pos=52,142
+Size=267,240
 Collapsed=0
 
 [Window][Collision]
-Pos=1602,754
-Size=751,471
+Pos=643,590
+Size=751,495
 Collapsed=0
 
 [Window][Camera]
-Pos=957,320
+Pos=519,594
 Size=500,285
 Collapsed=0
 
 [Window][Lighting]
-Pos=109,840
-Size=383,219
+Pos=267,958
+Size=383,211
 Collapsed=0
 
 [Window][Example: Console]
@@ -126,6 +126,11 @@ Collapsed=0
 [Window][Overlay Example]
 Pos=200,100
 Size=400,200
+Collapsed=0
+
+[Window][Scene]
+Pos=39,115
+Size=342,392
 Collapsed=0
 
 [Table][0x123EFEF7,4]
