--- a/assimp_viewer/imgui.ini
+++ b/assimp_viewer/imgui.ini
@@ -9,8 +9,8 @@ Size=383,138
 Collapsed=0
 
 [Window][Model]
-Pos=107,628
-Size=342,428
+Pos=397,853
+Size=340,277
 Collapsed=0
 
 [Window][FPS]
@@ -44,7 +44,7 @@ Size=300,120
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1240,1092
+Pos=1086,1181
 Size=1311,594
 Collapsed=1
 
@@ -129,8 +129,13 @@ Size=400,200
 Collapsed=0
 
 [Window][Scene]
-Pos=102,156
-Size=342,392
+Pos=24,851
+Size=343,279
+Collapsed=0
+
+[Window][AABB]
+Pos=26,70
+Size=724,749
 Collapsed=0
 
 [Table][0x123EFEF7,4]
