--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -184,6 +184,8 @@
     <None Include="..\shaders\anim_model.vs" />
     <None Include="..\shaders\basic\basic.fs" />
     <None Include="..\shaders\basic\basic.vs" />
+    <None Include="..\shaders\basic\basic_texture.fs" />
+    <None Include="..\shaders\basic\basic_texture.vs" />
     <None Include="..\shaders\billboard.fs" />
     <None Include="..\shaders\billboard.vs" />
     <None Include="..\shaders\grid.fs" />
