--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="..\include\bone_animation.h" />
     <ClInclude Include="..\include\camera.h" />
     <ClInclude Include="..\include\collision.h" />
+    <ClInclude Include="..\include\controls.h" />
     <ClInclude Include="..\include\grid.h" />
     <ClInclude Include="..\include\dev_gui.h" />
     <ClInclude Include="..\include\log_file_functions.h" />
