--- a/assimp_viewer/assimp_viewer.vcxproj.filters
+++ b/assimp_viewer/assimp_viewer.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClInclude Include="..\include\aabb.h">
       <Filter>Header Files\collision</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\controls.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shaders\grid.vs">
