--- a/assimp_viewer/assimp_viewer.vcxproj
+++ b/assimp_viewer/assimp_viewer.vcxproj
@@ -155,7 +155,7 @@
     <ClInclude Include="..\include\bone_animation.h" />
     <ClInclude Include="..\include\camera.h" />
     <ClInclude Include="..\include\collision.h" />
-    <ClInclude Include="..\include\controls.h" />
+    <ClInclude Include="..\include\input.h" />
     <ClInclude Include="..\include\gltf.h" />
     <ClInclude Include="..\include\grid.h" />
     <ClInclude Include="..\include\dev_gui.h" />
